syntax = "proto3";

message Task {
    int64 task_id = 1;
    repeated File files = 2;
    repeated Test tests = 3;
    // string configuration = 4;

    message File {
        int64 file_id = 1;
        string name = 2;
        bytes content = 3;
    }

    message Test {
        int64 test_id = 1;
        string input = 2;
        string output = 3;
        int64 time_limit = 4;
        int64 ram_limit = 5;
    }
}

message TaskResult {
    int64 result_id = 1;
    repeated TestResult tests_results = 2;
    // string compilation_log = 3;

    message TestResult {
        int64 source_test_id = 1;
        Status status = 2;
        int64 user_time = 3;
        int64 system_time = 4;
        int64 ram_usage = 5;
    }

    enum Status {
        OK = 0;
        RTE = 1;
        MEM = 2;
        TLE = 3;
        ANS = 4;
        CME = 5;
    }
}
